fix: Used -I flag for including hpp. Fixed.

--- a/CPP/Makefile
+++ b/CPP/Makefile
@@ -10,9 +10,9 @@ CXX = g++
 
 TARGET = Algorithms
 TESTS = AlgoTests
-all: $ (TARGET)
+all: $(TARGET)
 $(TARGET): $(TARGET).cpp
-	$(CXX) $(CXXFLAGS) -o $(TARGET) $(TARGET).cpp -I $(TARGET).hpp
+	$(CXX) $(CXXFLAGS) -o $(TARGET) $(TARGET).cpp $(TARGET).hpp
 tests: $(TESTS)
 $(TESTS): $(TESTS).cpp
 	$(CXX) $(CXXFLAGS) $(TESTS).cpp -o $(TESTS) $(TARGET).cpp
